1.8.0
=====

- Allow types to be resolved by assuming a types names space (simplifies
  specification of types where the full name space can be assumed)
- Inherit a custom type_field

1.7.3
=====

- Fix bug where __classcell__ was not passed into super_new during metaclass
  construction. This causes a RuntimeError with Python 3.8+ if the metaclass is
  subclassed.

1.7.2
=====

- Fix an edge case bug where validators are not executed against empty list/dict
  fields.
- Ensure that all validate and run_validators are executed on all entries in a
  typed list field

1.7.1
=====

- Tweak to generation of sphinx choices so TypedLists use choices from type.
- Fix issue in Sphinx plugin where ``choices_doc_text`` was not used to format
  choice values.
- Add TypedDictField to docs

1.7.0
=====

- Migrate from collections.Iterable to typing.Iterable to remove a warning
- Add user defined metadata to Resource.Meta object
- Add a reserved word guard, starting with fields (using fields causes
  clean_fields to go into a infinite recursion loop)

1.6.2
=====

- Migrate string formatting from % to "".format
- Apply black code style on all code
- Improve some type hints
- Add a Text block to XML Codec

1.6.1
=====

- Fix poetry config error that restricted Python versions > 3!

1.6.0
=====

- Remove encoding option for msgpack (this has been removed from msgpack itself)
- Correct some typing inconsistencies (EnumField was the most obvious fix)
- Package is now managed by poetry
- Migrate to GitHub Actions
- Static analysis and Coverage reporting now handled by SonarCloud.
- Toml Codec

1.5.2
=====
- Relax overly tight dependency specification. Removed pyup.io it is not suitable
  for packages.

1.5
===
- Improvements to sphinx autodoc generation
- Improvements to enum support

1.0b2
=====
- Added a redesigned CSV codec Reader to address issues with handling row-by-row
  processing and handling of row-level errors.
- Removed filter-query (moved to feature branch)

0.10b9
======