@@ -1,8 +1,11 @@
 """
 Tests of polymorphic behaviours
 """
+import pytest
+
 import odin
 from odin.resources import create_resource_from_dict
+from odin.utils import getmeta
 
 
 class AbstractResource(odin.Resource):
@@ -39,3 +42,19 @@ def test_resolve_resource_using_partial_type_field():
     )
 
     assert isinstance(actual, ResourceB)
+
+
+@pytest.mark.parametrize("resource", (ResourceA, ResourceB))
+def test_type_field_is_inherited(resource):
+    expected = getmeta(AbstractResource).type_field
+    actual = getmeta(resource).type_field
+
+    assert actual == expected
+
+
+@pytest.mark.parametrize("resource", (ResourceA, ResourceB))
+def test_name_space_is_inherited(resource):
+    expected = getmeta(AbstractResource).name_space
+    actual = getmeta(resource).name_space
+
+    assert actual == expected
